# sagasu

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.ci  Dockerfile.dev  Dockerfile.release
example/: config.yml  me.funwarioisii.sagasu.plist
sagasu/: __init__.py  app.py  config.py  crawler.py  engine.py  image_captioning.py  indexer.py  model.py  repository.py  util.py  web.py
tests/: test_e2e.py  test_engine.py  test_repository.py  test_search_engine.py
