[tool.poetry]
name = "sagasu"
version = "0.2"
description = "sagasu is search all my contents"
authors = ["funwarioisii"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sagasu = 'sagasu.app:app'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

