[tool.poetry]
name = "sagasu"
version = "0.5.1"
description = "sagasu is search all my contents"
authors = ["funwarioisii"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.8.0"
click = "^7.1.2"
pyyaml = "^5.3.1"
pandas = "^1.0.3"
spacy = "^2.2.4"
tqdm = "^4.46.0"
ginza = "^3.1.2"
pillow = "^7.1.2"
numpy = "^1.18.4"
tensorflow = {version = "^2.2.0", optional = true}
streamlit = "^0.64.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sagasu = 'sagasu.app:app'

[tool.poetry.extras]
caption = ["tensorflow"]
ui = ["streamlit"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

